How To Implement Validation With MediatR And FluentValidation

--- a/MilanJovanović/Gatherly/Gatherly.App/Gatherly.App.csproj
+++ b/MilanJovanović/Gatherly/Gatherly.App/Gatherly.App.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.6.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
     <PackageReference Include="Scrutor.AspNetCore" Version="3.3.0" />
