--- a/MilanJovanović/Gatherly/Gatherly.Infrastructure/Gatherly.Infrastructure.csproj
+++ b/MilanJovanović/Gatherly/Gatherly.Infrastructure/Gatherly.Infrastructure.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Quartz" Version="3.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Gatherly.Persistence\Gatherly.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
