--- a/MilanJovanović/Gatherly/Gatherly.Persistence/Gatherly.Persistence.csproj
+++ b/MilanJovanović/Gatherly/Gatherly.Persistence/Gatherly.Persistence.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+    <Folder Include="Constants\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.20" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Gatherly.Application\Gatherly.Application.csproj" />
+  </ItemGroup>
+
 </Project>
