--- a/MilanJovanović/Gatherly/Gatherly.Infrastructure/Gatherly.Infrastructure.csproj
+++ b/MilanJovanović/Gatherly/Gatherly.Infrastructure/Gatherly.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Quartz" Version="3.4.0" />
   </ItemGroup>
 
