--- a/MilanJovanović/Gatherly/Gatherly.Persistence/Gatherly.Persistence.csproj
+++ b/MilanJovanović/Gatherly/Gatherly.Persistence/Gatherly.Persistence.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.20" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
