How To Unit Test CQRS Handlers With Moq And FluentAssertions | 100% Coverage

--- a/MilanJovanović/Gatherly/Gatherly.Application/Gatherly.Application.csproj
+++ b/MilanJovanović/Gatherly/Gatherly.Application/Gatherly.Application.csproj
@@ -11,8 +11,12 @@
     <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Gatherly.Domain\Gatherly.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<InternalsVisibleTo Include="Gatherly.Application.UnitTests" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Gatherly.Domain\Gatherly.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
