Collections and Generics in C# 10 - 3

--- a/Pluralsight/ZoranHorvat/ContractorsCo/ConsoleDemo/ConsoleDemo.csproj
+++ b/Pluralsight/ZoranHorvat/ContractorsCo/ConsoleDemo/ConsoleDemo.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Using Include="ConsoleDemo" />
     <Using Include="System.Text" />
     <Using Include="Models" />
     <Using Include="Models.Common" />
