--- a/MilanJovanović/Gatherly/Gatherly.Presentation/Gatherly.Presentation.csproj
+++ b/MilanJovanović/Gatherly/Gatherly.Presentation/Gatherly.Presentation.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.21" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
